--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=D021A75F409FF08E25F35890865D76A7
-Description=Camera Controls and Tower Placement Test
+Description=GDO750 MAJOR PROJECT S3S1 (23/24)
 ProjectName=Frankenstein Manor Defense
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "A2C55A7A4631EFC49F6BF593B53993AF", "Frankenstein Manor Defense")
 
